--- a/style.css
+++ b/style.css
@@ -21,8 +21,8 @@ html {
 
 nav {
     background: var(--nav);
-    display: flex;
-    justify-content: space-evenly;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
     padding: 20px 0;
     position: fixed;
     top: 0;
@@ -34,58 +34,24 @@ nav a:hover {
 }
 
 header {
-    margin: 60px auto 20px;
+    margin: 70px auto 20px;
     width: 98vw;
     border: 1px solid black;
     min-width: 300px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-header h1 {
-    margin-top: 40px;
-}
-
-header h2 {
-    margin-bottom: 20px;
-}
-
-header a {
-    border: 2px solid red;
-    border-radius: 5px;
-    max-width: 700px;
-    margin: 5px;
-    padding: 5px 10px;
-    color: black;
-    box-shadow: 1px 4px 4px rgba(0, 0, 0, 0.25);
-    transition: .5s;
-}
-
-header a:hover {
-    transform: scale(1.1);
-}
-
-.login {
-    margin-bottom: 25px;
-    border-color: var(--title);
-}
-
-header p {
-    margin-bottom: 5px;
-}
-
 main {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(2, 2fr);
+}
+
+.main-box img {
+    max-width: 250px;
 }
 
 .main-box {
-    width: 40%;
     margin: 10px;
-    height: 200px;
     border: 1px solid black;
     box-shadow: 1px 4px 4px rgba(0, 0, 0, 0.25);
     transition: .1s;
@@ -107,8 +73,6 @@ form {
     margin: 0 auto;
     border: 1px solid black;
     padding: 10px 20px;
-    display: flex;
-    flex-direction: column;
     box-shadow: 1px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
@@ -126,7 +90,7 @@ form button {
     padding: 5px;
     margin: 5px;
     background-color: transparent;
-    border-color: #ff6b6b;
+    border-color: var(--title);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
@@ -136,8 +100,6 @@ footer {
 
 footer div {
     padding: 5px;
-    display: flex;
-    flex-direction: column;
     margin: 0 auto;
 }
 
@@ -152,11 +114,16 @@ footer a:hover {
 
 @media only screen and (max-width: 800px) {
     nav {
-        flex-direction: column;
+        grid-template-columns: 1fr;
+    }
+    
+    nav img {
+        width: 25vw;
+        margin: 10px 0;
     }
     
     header {
-        margin: 200px auto 20px;
+        margin: 26vh auto 20px;
     }
 
     header img {
@@ -164,8 +131,12 @@ footer a:hover {
     }
 
     main {
-        display: flex;
-        flex-direction: column;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    main img {
+        width: 100%;
     }
 
     .main-box {
