--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ nav {
     background: var(--nav);
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    padding: 20px 0;
+    padding: 10px 0;
     position: fixed;
     top: 0;
     width: 100vw;
@@ -35,10 +35,9 @@ nav a:hover {
 }
 
 header {
-    margin: 70px auto 20px;
+    margin: 10vh auto 20px;
     width: 98vw;
     border: 1px solid black;
-    min-width: 300px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
